<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/title_payment_amount" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">
    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        tools:text="1507 EUR" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/title_timer" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:layout_margin="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/timer_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/timer_label"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="30"
            android:textSize="56sp" />

    </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textAlignment="center"
            android:gravity="bottom"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/second_tap_instruction" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/title_used_card" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/payment_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        >

        <TextView
            android:id="@+id/tvCardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="Token ID:\nDigital Card ID:\nDefault: true\nPayment Remaining: 10"/>

        <Button
            android:id="@+id/btn_change_card"
            android:layout_below="@id/tvCardInfo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/btn_change_card" />
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>