<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_transaction_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/title_payment_amount" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="3dp"
            app:cardCornerRadius="10dp">
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:gravity="center"
                tools:text="1507 EUR" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/title_transaction_result" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_margin="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/payment_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_payment_success"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="@android:color/holo_green_dark"
        android:padding="@dimen/horizontal_padding"
        android:text="@string/payment_transaction_sent" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAlignment="center"
                android:gravity="bottom"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/holo_orange_light"
                android:text="Please check POS for payment data verification result by Server" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/btn_ok"
        android:textColor="@color/colorAccent" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/title_used_card" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            >

            <TextView
                android:id="@+id/tvCardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                tools:text="Token ID:\nDigital Card ID:\nDefault: true\nPayment Remaining: 10"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/title_default_card" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            >

            <TextView
                android:id="@+id/tvCardInfoOriginalDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                tools:text="Token ID:\nDigital Card ID:\nDefault: true\nPayment Remaining: 10"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>