<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/title_used_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentTop="@id/buttonChangeCard"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/title_used_card" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_below="@id/title_used_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="16dp"
            android:elevation="3dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/tvCardInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    tools:text="Token ID:\nDigital Card ID:\nDefault: true\nPayment Remaining: 10"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/buttonChangeCard"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_below="@id/card"
            android:text="Change Card" />
    </RelativeLayout>
    <TextView
        android:id="@+id/transaction_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentTop="@id/buttonChangeCard"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/transaction_input" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsrp_amount_hint"
        />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="0" />

    <TextView
        android:id="@+id/textViewTransactionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transaction Type" />


    <Spinner
        android:id="@+id/spinnerTransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textViewCryptogramType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cryptogram Type" />

    <Spinner
        android:id="@+id/spinnerCryptogramType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/pay" />



</LinearLayout>