<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_amount_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:text="@string/title_payment_amount"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="1507 EUR" />

        <ImageView
            android:id="@+id/img_fp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            app:srcCompat="@drawable/fingerprint_screen" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/horizontal_padding"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            tools:text="Message with instructions" />


        <LinearLayout
            android:id="@+id/payment_button_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_keyguard_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/verify_by_keyguard"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_auth_by_wallet_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/authenticate_by_wallet_pin"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#30000000"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.core.widget.ContentLoadingProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

</FrameLayout>